--- a/roles/environment/templates/edge.cfg
+++ b/roles/environment/templates/edge.cfg
@@ -43,6 +43,9 @@ password =
 reader_username = reader_username
 reader_password = reader_username
 
+[edge_data_bridge_defaults]
+resources_api_server = http://public.api-sandbox.openprocurement.org
+
 [edge_data_bridge_tenders.yaml]
 resources = tenders
 user_agent = {{ user_agent }}.${edge_data_bridge_tenders.yaml:resources}
