Vagrant with torrent

--- a/roles/environment/tasks/buildout.yml
+++ b/roles/environment/tasks/buildout.yml
@@ -121,15 +121,31 @@
     become_user: "{{ user_name }}"
 
   - name: Copy torrent file.
-    copy: src=./edge-ea_public_sandbox_db.couch.torrent dest=/home/{{user_name}}/{{buildout.buildout_path}}/var/couchdb/edge-ea_public_sandbox_db.couch.torrent
+    copy: src=./{{ torrent_filename }} dest=/home/{{user_name}}/{{buildout.buildout_path}}/var/couchdb/{{ torrent_filename }}
     tags:
     - torrent
     become: yes
     become_user: "{{ user_name }}"
 
   - name: Download public database
-    shell: ctorrent -s {{ couchdb_db }} -e 0 -E 0.0 edge-ea_public_sandbox_db.couch.torrent
-      chdir=/home/{{ user_name }}/{{buildout.buildout_path}}/var/couchdb
+    shell: ctorrent -s {{ couchdb_db }}.couch -e 0 -E 0.0 {{ torrent_filename }}
+      chdir=/home/{{ user_name }}/{{ buildout.buildout_path }}/var/couchdb
+    tags:
+    - torrent
+    become: yes
+    become_user: "{{ user_name }}"
+
+  - name: Copy db for torrent seed
+    shell: cp {{ couchdb_db }}.couch torrent.couch
+      chdir=/home/{{ user_name }}/{{ buildout.buildout_path }}/var/couchdb
+    tags:
+    - torrent
+    become: yes
+    become_user: "{{ user_name }}"
+
+  - name: Start torrent seeding
+    shell: ctorrent -s torrent.couch -d {{ torrent_filename }}
+      chdir=/home/{{ user_name }}/{{ buildout.buildout_path }}/var/couchdb
     tags:
     - torrent
     become: yes
