--- a/roles/environment/templates/edge.cfg
+++ b/roles/environment/templates/edge.cfg
@@ -1,14 +1,25 @@
 [buildout]
 extends =
     profiles/production.cfg
+{% if 'auctions' in resources %}
     profiles/auctions.cfg
+{% endif %}
+{% if 'contracts' in resources %}
+    profiles/contracts.cfg
+{% endif %}
+{% if 'plans' in resources %}
+    profiles/plans.cfg
+{% endif %}
+{% if 'tenders' in resources %}
+    profiles/tenders.cfg
+{% endif %}
 
 [openprocurement.edge.ini]
 resources = tenders,plans,contracts,auctions
-api_version = {{ tenders_api_version }}
+api_version = {{ api_version }}
 couchdb_db = {{ couchdb_db }}
 logs_db = {{ logs_db }}
 
 [edge_data_bridge_defaults]
 user_agent = {{ user_agent }}
-resources_api_server = {{ tenders_api_server }}
+resources_api_server = {{ api_server }}
