--- a/roles/environment/templates/edge.cfg
+++ b/roles/environment/templates/edge.cfg
@@ -23,3 +23,6 @@ logs_db = {{ logs_db }}
 [edge_data_bridge_defaults]
 user_agent = {{ user_agent }}
 resources_api_server = {{ api_server }}
+
+[versions]
+openprocurement.edge = {{ versions.openprocurement_edge }}
