--- a/roles/environment/templates/edge.cfg
+++ b/roles/environment/templates/edge.cfg
@@ -26,3 +26,4 @@ resources_api_server = {{ api_server }}
 
 [versions]
 openprocurement.edge = {{ versions.openprocurement_edge }}
+openprocurement_client = {{ versions.openprocurement_client }}
